--- a/RecipeCookbook/Views/RecipeOverview.xaml
+++ b/RecipeCookbook/Views/RecipeOverview.xaml
@@ -7,14 +7,42 @@
              x:Name="RecipesOverview"
              Title="Recipe overview">
 
-    <RefreshView Padding="10" x:DataType="local:RecipeViewModel" Command="{Binding LoadRecipes}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
-        <CollectionView x:Name="ItemsListView" ItemsSource="{Binding RecipeItems}" SelectionMode="None">
+    <RefreshView Padding="10" x:DataType="local:RecipeViewModel" 
+                 Command="{Binding LoadRecipes}" 
+                 IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+        
+        <CollectionView x:Name="ItemsListView" 
+                        ItemsSource="{Binding RecipeItems}" 
+                        SelectionMode="None">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <RelativeLayout Padding="10" x:DataType="model:RecipeItem">
-                        <Label Text="{Binding RecipeName}" LineBreakMode="NoWrap" Style="{DynamicResource ListItemTextStyle}" FontSize="16" />
-                        <!--<Label Text="" FontFamily="FontAwesomeSolid" FontSize="20" HorizontalOptions="End" VerticalOptions="End" RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToView, ElementName=leave, Property=X, Constant=-40}" />-->
-                    </RelativeLayout>
+                <DataTemplate x:DataType="model:RecipeItem">
+                    <Grid RowDefinitions="*" 
+                          ColumnDefinitions="*" 
+                          Padding="0,0,10,0"
+                          WidthRequest="340"
+                          HorizontalOptions="Fill"
+                          VerticalOptions="Fill">
+                   
+
+                        <Image Source="{Binding ImageUrl}" Aspect="AspectFill" VerticalOptions="Fill" HorizontalOptions="Fill" AutomationProperties.IsInAccessibleTree="False"/>
+                        <Label x:Name="recipeName"
+                               Padding="10"
+                               HorizontalOptions="Center" 
+                               VerticalOptions="Center"
+                               Text="{Binding RecipeName}"
+                               LineBreakMode="WordWrap" 
+                               MaxLines="3"
+                               FontSize="16"
+                               FontAttributes="Bold" />
+                    </Grid>
+                    <!--<RelativeLayout Padding="10" 
+                                    x:DataType="model:RecipeItem">
+                        <Label Text="{Binding RecipeName}" 
+                               LineBreakMode="NoWrap" 
+                               Style="{DynamicResource ListItemTextStyle}" 
+                               FontSize="16" />
+                        --><!--<Label Text="" FontFamily="FontAwesomeSolid" FontSize="20" HorizontalOptions="End" VerticalOptions="End" RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToView, ElementName=leave, Property=X, Constant=-40}" />--><!--
+                    </RelativeLayout>-->
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
