Yay we kunnen van de Overview naar de AddRecipe met een groene button!

--- a/RecipeCookbook/AppShell.xaml
+++ b/RecipeCookbook/AppShell.xaml
@@ -28,4 +28,9 @@
         ContentTemplate="{DataTemplate local:RecipeOverview}"
         Route="RecipeOverview" />
 
+    <ShellContent
+        Title="ToAddRecipe"
+        ContentTemplate="{DataTemplate local:AddRecipe}"
+        Route="AddRecipe" />
+
 </Shell>
