not fully working but if clicked on item in collectionview it goes to new page. just need to get the id param through..

--- a/RecipeCookbook/AppShell.xaml
+++ b/RecipeCookbook/AppShell.xaml
@@ -24,12 +24,12 @@
     </Shell.Resources>
 
     <ShellContent
-        Title="Home"
+        Title="Recipe overview"
         ContentTemplate="{DataTemplate local:RecipeOverview}"
         Route="RecipeOverview" />
 
     <ShellContent
-        Title="ToAddRecipe"
+        Title="Add Recipe"
         ContentTemplate="{DataTemplate local:AddRecipe}"
         Route="AddRecipe" />
 
