--- a/RecipeCookbook/Views/RecipeDetail.xaml
+++ b/RecipeCookbook/Views/RecipeDetail.xaml
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:model="clr-namespace:RecipeCookbook.Models"
+             xmlns:model="clr-namespace:RecipeCookbook.Models" 
+             xmlns:viewmodels="clr-namespace:RecipeCookbook.ViewModels" 
+             x:DataType="viewmodels:ItemDetailViewModel"
              x:Class="RecipeCookbook.Views.RecipeDetail"
              Title="Recipe details">
     <ContentPage.Content>
         
         <ScrollView>
-            <StackLayout Margin="20" x:DataType="model:RecipeItem">
-                <Label Text="{Binding RecipeName}" 
+            <StackLayout Margin="20">
+                <Label Text="{Binding recipeItem.RecipeName}" 
                    HorizontalOptions="Center" 
                    Style="{DynamicResource TitleStyle}" />
             </StackLayout>
