--- a/RecipeCookbook/Views/RecipeOverview.xaml
+++ b/RecipeCookbook/Views/RecipeOverview.xaml
@@ -7,12 +7,12 @@
              x:Name="RecipesOverview"
              Title="Recipe overview">
 
-    <RefreshView Padding="10" x:DataType="local:RecipeViewModel" 
+    <RefreshView  x:DataType="local:RecipeViewModel" 
                  Command="{Binding LoadRecipes}" 
                  IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
-        <StackLayout Margin="20,35,20,20">
+        <StackLayout >
 
-            <Button 
+            <Button Margin="20,35,20,20"
                 Command="{Binding GoToAddRecipeView}" 
                 Text="Add recipe" 
                 />
@@ -43,6 +43,7 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="Auto" />
+                                  
                                 </Grid.ColumnDefinitions>
                                 <Grid.GestureRecognizers>
                                     <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipeViewModel}}, Path=ItemTapped}" CommandParameter="{Binding .}" />
@@ -56,11 +57,18 @@
                        Text="{Binding RecipeName}"
                        FontAttributes="Bold"
                                FontSize="36"/>
+                                
                                 <Label Grid.Row="1"
                        Grid.Column="1"
                        Text="{Binding RecipeType}"
                        FontAttributes="Italic"
                        VerticalOptions="End" />
+
+                                <Button Grid.Row="1" Grid.Column="2"
+                                        CornerRadius="20"
+                                         WidthRequest="40"
+                                         HeightRequest="40"
+                                       Text="Edit" Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipeViewModel}}, Path=EditThisRecipe}" CommandParameter="{Binding .}"/>
 
                             </Grid>
                         </SwipeView>
