--- a/RecipeCookbook/Views/RecipeOverview.xaml
+++ b/RecipeCookbook/Views/RecipeOverview.xaml
@@ -34,41 +34,53 @@
                                       />
                                 </SwipeItems>
                             </SwipeView.RightItems>
-
-                            <Grid Padding="10">
+                            <Grid Padding="10,0">
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition Height="*" />
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="Auto" />
-                                  
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
                                 <Grid.GestureRecognizers>
                                     <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipeViewModel}}, Path=ItemTapped}" CommandParameter="{Binding .}" />
                                 </Grid.GestureRecognizers>
-                                <Image Grid.RowSpan="2"
-                       Source="{Binding ImageUrl}"
-                       Aspect="AspectFill"
-                       HeightRequest="100"
-                       WidthRequest="100" />
-                                <Label Grid.Column="1"
-                       Text="{Binding RecipeName}"
-                       FontAttributes="Bold"
-                               FontSize="36"/>
-                                
                                 <Label Grid.Row="1"
-                       Grid.Column="1"
-                       Text="{Binding RecipeType}"
-                       FontAttributes="Italic"
-                       VerticalOptions="End" />
-
-                                <Button Grid.Row="1" Grid.Column="2"
+                                       Margin="10,-40,0,-40"
+                                               Grid.Column="1"
+                                               Grid.ColumnSpan="2"
+                                               Text="{Binding RecipeName}"
+                                               FontAttributes="Bold"
+                                               FontSize="20"
+                                               />
+                                <Image 
+                                       Margin="0,-10,0,0"
+                                       Grid.Row="2"
+                                       Grid.RowSpan="2" 
+                                       Grid.Column="0"
+                                       Source="{Binding ImageUrl}" 
+                                       />
+                                <Label 
+                                       Margin="10,-10,0,0"
+                                       Grid.Row="2"
+                                       Grid.RowSpan="2"
+                                               Grid.Column="1"
+                                               Grid.ColumnSpan="2"
+                                               VerticalOptions="CenterAndExpand" 
+                                               Text="{Binding RecipeType}"
+                                               FontAttributes="Italic"
+                                               />
+                                <Button Grid.Row="4" 
+                                        Padding="-10"
+                                        Margin="0,0,0,10"
+                                        FontSize="12"
+                                        Grid.ColumnSpan="3"
+                                        HeightRequest="30"
                                         CornerRadius="20"
-                                         WidthRequest="40"
-                                         HeightRequest="40"
-                                       Text="Edit" Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipeViewModel}}, Path=EditThisRecipe}" CommandParameter="{Binding .}"/>
+                                        Text="Edit" Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipeViewModel}}, Path=EditThisRecipe}" CommandParameter="{Binding .}"/>
 
                             </Grid>
                         </SwipeView>
