last changes for UI, everything works fine now before cleanup

--- a/RecipeCookbook/AppShell.xaml
+++ b/RecipeCookbook/AppShell.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RecipeCookbook.AppShell"
        xmlns:local="clr-namespace:RecipeCookbook.Views"
+       BackgroundColor="#96cb94"
              >
 
     <Shell.Resources>
@@ -19,17 +20,19 @@
                 <Setter Property="Shell.TabBarTitleColor" Value="Black"/>
             </Style>
             <Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />
-            <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}" />
+            <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}"/>
         </ResourceDictionary>
     </Shell.Resources>
 
     <ShellContent
         Title="Recipe overview"
+        AutomationId="ROverview"
         ContentTemplate="{DataTemplate local:RecipeOverview}"
         Route="RecipeOverview" />
 
     <ShellContent
         Title="Add Recipe"
+        AutomationId="ShellAddRecipe"
         ContentTemplate="{DataTemplate local:AddRecipe}"
         Route="AddRecipe" />
 
