--- a/RecipeCookbook/Views/RecipeDetail.xaml
+++ b/RecipeCookbook/Views/RecipeDetail.xaml
@@ -25,16 +25,16 @@
             </Grid>
 
                 <ScrollView Grid.Row="1">
-                    <StackLayout Margin="20" HorizontalOptions="Center" >
+                    <StackLayout Margin="10"  >
                         <Label Text="{Binding recipeItem.RecipeName}" Style="{DynamicResource TitleStyle}" FontAttributes="Bold"/>
                         <Label Text="{Binding recipeItem.Rating, StringFormat='Rating: {0:N0}'}" />
+                        <Label Text="{Binding recipeItem.RecipeTags, StringFormat='Tagged with: {0:RecipeTags} '}" />
                         <Label Text="Ingredients:" FontAttributes="Bold"/>
                         <Label Text="{Binding recipeItem.Ingredients}" />
                         <Label Text="Steps:" FontAttributes="Bold"/>
                         <Label Text="{Binding recipeItem.RecipeBody}" />
-                        <Label Text="{Binding recipeItem.RecipeTags, StringFormat='Tagged with: {0:RecipeTags} '}" /> 
                         
-                    </StackLayout>
+                </StackLayout>
                 </ScrollView>
         </Grid>
     </ContentPage.Content>
