--- a/RecipeCookbook/Views/EditRecipe.xaml
+++ b/RecipeCookbook/Views/EditRecipe.xaml
@@ -7,7 +7,7 @@
              x:Class="RecipeCookbook.Views.EditRecipe">
     <ContentPage.Content>
         <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
-            <Entry x:Name="RecipeName" Text="{Binding Name}"  />
+            <Entry x:Name="RecipeName" Text="{Binding Name}" AutomationId="EditRecipeName" />
             <Entry x:Name="ImageUrl" Text="{Binding ImageUrl}"  />
             <Editor x:Name="Ingredients" Text="{Binding Ingredients}"  />
             <Editor x:Name="RecipeBody" Text="{Binding RecipeBody}"  />
