--- a/RecipeCookbook/Views/RecipeOverview.xaml
+++ b/RecipeCookbook/Views/RecipeOverview.xaml
@@ -5,6 +5,7 @@
              xmlns:model="clr-namespace:RecipeCookbook.Models" 
              x:Class="RecipeCookbook.Views.RecipeOverview"
              x:Name="RecipesOverview"
+             
              Title="Recipe overview">
 
     <RefreshView  x:DataType="local:RecipeViewModel" 
@@ -15,6 +16,7 @@
             <Button Margin="20,35,20,20"
                 Command="{Binding GoToAddRecipeView}" 
                 Text="Add recipe" 
+                    AutomationId = "MyButton"
                 />
 
             <CollectionView x:Name="ItemsListView" 
@@ -55,6 +57,8 @@
                                                Text="{Binding RecipeName}"
                                                FontAttributes="Bold"
                                                FontSize="20"
+                                       AutomationId="RecipeOverviewName"
+                                       
                                                />
                                 <Image 
                                        Margin="0,-10,0,0"
@@ -72,6 +76,7 @@
                                                VerticalOptions="CenterAndExpand" 
                                                Text="{Binding RecipeType}"
                                                FontAttributes="Italic"
+                                    AutomationId="RecipeOverviewType"
                                                />
                                 <Button Grid.Row="4" 
                                         Padding="-10"
@@ -80,7 +85,8 @@
                                         Grid.ColumnSpan="3"
                                         HeightRequest="30"
                                         CornerRadius="20"
-                                        Text="Edit" Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipeViewModel}}, Path=EditThisRecipe}" CommandParameter="{Binding .}"/>
+                                        Text="Edit" Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipeViewModel}}, Path=EditThisRecipe}" CommandParameter="{Binding .}"
+                                        AutomationId="RecipeOverviewEditButton"/>
 
                             </Grid>
                         </SwipeView>
